k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitentl
  namespace: srv
  labels:
    app: sitentl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sitentl
  template:
    metadata:
      labels:
        app: sitentl
    spec:
      containers:
        - name: sitentl
          image: git.ntl.com.br:5050/neeo-projetos/sitentl:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
