k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitentl
  namespace: srv
  labels:
    app: sitentl
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: sitentl
