k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitentl-ingress
  namespace: srv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ntl.com.br
        - www.ntl.com.br
      secretName: sitentl-tls
  rules:
    - host: ntl.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sitentl
                port:
                  number: 3000
    - host: www.ntl.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sitentl
                port:
                  number: 3000
